--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
         </div>
         <img class="u-align-center-sm u-align-center-xs u-image u-image-contain u-image-default u-image-14" src="images/Mlogo.png" alt="" data-image-width="907" data-image-height="512" data-href="./" title="Index">
-        <p class="u-text u-text-body-alt-color u-text-default u-text-13"> Melihh Kibar Sahil caddesi No : 2 Kırkpınar Sapanca / SAKARYA<br>Telefon: 0 545 281 45 55<br>info@majakirkpinar.com
+        <p class="u-text u-text-body-alt-color u-text-default u-text-13"> Melih Kibar Sahil caddesi No : 2 Kırkpınar Sapanca / SAKARYA<br>Telefon: 0 545 281 45 55<br>info@majakirkpinar.com
         </p>
       </div>
     </section>
